--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,13 @@ before_install:
 
 script:
   - docker run eli9000/docker-react npm run test -- --coverage
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-1"
+  app: "docker"
+  env: "Docker-env"
+  bucket_name: "elasticbeanstalk-us-east-1-842140652626"
+  bucket_path: "docker"
+  on:
+    branch: master
