--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ script:
 deploy:
   provider: elasticbeanstalk
   region: "us-east-1"
-  app: "docker"
+  app: "docker-react"
   env: "Docker-env"
   bucket_name: "elasticbeanstalk-us-east-1-842140652626"
   bucket_path: "docker"
